--- a/nuit-info-surfapp/src/app/page-connexion/page-connexion.component.html
+++ b/nuit-info-surfapp/src/app/page-connexion/page-connexion.component.html
@@ -1,15 +1,15 @@
 
 <div id="connexion-form-div">
-    <form id="connexion-form">
+    <form (ngSubmit)="onSave(f)" #f="ngForm" id="connexion-form">
         <h1>Connexion</h1>
         
         <label><b>Nom d'utilisateur</b></label>
-        <input type="text" placeholder="Entrer le nom d'utilisateur" name="username" required><br>
+        <input type="text" placeholder="Entrer le nom d'utilisateur" name="email" ngModel required><br>
 
         <label><b>Mot de passe</b></label>
-        <input type="password" placeholder="Entrer le mot de passe" name="password" required><br>
+        <input type="password" placeholder="Entrer le mot de passe" name="password" ngModel required><br>
 
-        <input type="submit" id='submit' value='LOGIN' >
+        <input type="submit" id='submit' value='LOGIN'>
     </form>
 </div>
 
