--- a/nuit-info-surfapp/src/app/page-connexion/page-connexion.component.html
+++ b/nuit-info-surfapp/src/app/page-connexion/page-connexion.component.html
@@ -1,6 +1,6 @@
-
+<!-- 
 <div id="connexion-form-div">
-    <form (ngSubmit)="onSave(f)" #f="ngForm" id="connexion-form">
+    <form (ngSubmit)="onSave(f)" id="connexion-form" #f="ngForm">
         <h1>Connexion</h1>
         
         <label><b>Nom d'utilisateur</b></label>
@@ -9,13 +9,15 @@
         <label><b>Mot de passe</b></label>
         <input type="password" placeholder="Entrer le mot de passe" name="password" ngModel required><br>
 
-        <input type="submit" id='submit' value='LOGIN'>
+        <input type="submit" id='submit' value='LOGIN' [disabled]="f.invalid">
     </form>
 </div>
 
 <div>
-    <!--Ajoutez lien de redirection mote d'inscription-->
+    Ajoutez lien de redirection mote d'inscription
     <a href="#"> Toujours pas dans la secte ? </a>
-    <!--Ajoutez lien de redirection mote de passe oublié-->
+    Ajoutez lien de redirection mote de passe oublié
     <a href="#"> Code secret oublié ? </a>
-</div>
+</div> -->
+
+<p> hello word</p>
