--- a/nuit-info-surfapp/src/app/page-connexion/page-connexion.component.html
+++ b/nuit-info-surfapp/src/app/page-connexion/page-connexion.component.html
@@ -1,4 +1,3 @@
-<!-- 
 <div id="connexion-form-div">
     <form (ngSubmit)="onSave(f)" id="connexion-form" #f="ngForm">
         <h1>Connexion</h1>
@@ -14,10 +13,8 @@
 </div>
 
 <div>
-    Ajoutez lien de redirection mote d'inscription
+    <!--Ajoutez lien de redirection mote d'inscription-->
     <a href="#"> Toujours pas dans la secte ? </a>
-    Ajoutez lien de redirection mote de passe oublié
+    <!--Ajoutez lien de redirection mote de passe oublié-->
     <a href="#"> Code secret oublié ? </a>
-</div> -->
-
-<p> hello word</p>
+</div> 
