--- a/nuit-info-surfapp/src/app/app.component.html
+++ b/nuit-info-surfapp/src/app/app.component.html
@@ -1,2 +1,3 @@
-<h1> PAGE DE CONNEXION </h1>
-<app-page-connexion></app-page-connexion>
+<!--<h1>CONNEXION</h1>
+<app-page-connexion></app-page-connexion>-->
+<app-sensibilisation></app-sensibilisation>
