sensibilisation ok, il faudrait mettre le compteur avec le back

--- a/nuit-info-surfapp/src/app/sensibilisation/sensibilisation.component.html
+++ b/nuit-info-surfapp/src/app/sensibilisation/sensibilisation.component.html
@@ -1,12 +1,11 @@
-<h1>Les déchets sur les plages un combat au quotidient</h1>
-<h5>Titre de niveau 5</h5>
-
-
-
-<img src="https://images.unsplash.com/photo-1600418725276-a399595aac45?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=667&q=80">
-<img src="https://images.unsplash.com/photo-1565879422384-053cc91c8b8b?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80">
-<img src="https://images.unsplash.com/photo-1589634749000-1e72ec00a13f?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=667&q=80"
-        
-        width="400"
-        height="341">
-
+<FONT color=#00c4cc>
+<h1 style="text-align: center">Les déchets sur les plages un combat au quotidient </h1>
+<h5 style="text-align: center">Les déchets et la pollution des eaux sont un combat cotidient pour tous les surfeurs et surfeuses !</h5>
+</FONT>
+<img src="https://images.unsplash.com/photo-1565879422384-053cc91c8b8b?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" class="triangle" />
+<img src="https://images.unsplash.com/photo-1600418725276-a399595aac45?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=667&q=80" class="triangleinverse" />
+<img src="https://images.unsplash.com/photo-1589634749000-1e72ec00a13f?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=667&q=80" class="triangle" />
+<img src="https://images.unsplash.com/photo-1520732770642-f4d947ca9653?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=703&q=80" class="triangleinverse" />
+<center>
+    <h1>Compteur</h1>
+</center>
