--- a/nuit-info-surfapp/src/app/page-inscription/page-inscription.component.html
+++ b/nuit-info-surfapp/src/app/page-inscription/page-inscription.component.html
@@ -1,3 +1,5 @@
+<h1> Inscription </h1>
+
 <form (ngSubmit)="onSave(f)" id="inscription-form" #f="ngForm">
     <div>
         <label for="name"> Nom : </label>
