--- a/nuit-info-surfapp/src/app/app.component.html
+++ b/nuit-info-surfapp/src/app/app.component.html
@@ -1,3 +1,1 @@
-<h1> PAGE DE CONNEXION </h1>
-<app-page-connexion> </app-page-connexion>
-<app-page-inscription> </app-page-inscription>
+<router-outlet></router-outlet>
