--- a/nuit-info-surfapp/src/app/app.component.html
+++ b/nuit-info-surfapp/src/app/app.component.html
@@ -1,4 +1,5 @@
 <!--<h1>CONNEXION</h1>
-<app-page-connexion></app-page-connexion>-->
-
+<app-page-connexion></app-page-connexion>
 <app-sensibilisation></app-sensibilisation>
+<app-formulairepostpratique></app-formulairepostpratique>-->
+<app-fondsite></app-fondsite>
