--- a/nuit-info-surfapp/src/app/sensibilisation/sensibilisation.component.html
+++ b/nuit-info-surfapp/src/app/sensibilisation/sensibilisation.component.html
@@ -1,11 +1,91 @@
-<FONT color=#00c4cc>
-<h1 style="text-align: center">Les déchets sur les plages un combat au quotidient </h1>
-<h5 style="text-align: center">Les déchets et la pollution des eaux sont un combat cotidient pour tous les surfeurs et surfeuses !</h5>
-</FONT>
-<img src="https://images.unsplash.com/photo-1565879422384-053cc91c8b8b?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" class="triangle" />
-<img src="https://images.unsplash.com/photo-1600418725276-a399595aac45?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=667&q=80" class="triangleinverse" />
-<img src="https://images.unsplash.com/photo-1589634749000-1e72ec00a13f?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=667&q=80" class="triangle" />
-<img src="https://images.unsplash.com/photo-1520732770642-f4d947ca9653?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=703&q=80" class="triangleinverse" />
-<center>
-    <h1>Compteur</h1>
-</center>
+<form action="/ma-page-de-traitement" method="post">
+    <div>
+        <label for="ville">Ville : </label>
+        <input type="text" id="ville" name="ville" required /> 
+    </div>
+    <div>
+        <label for="spot">Spot / Plage : </label>
+        <input type="text" id="spot" name="spot" required /> 
+    </div>
+    <!-- si on abandonne les barres
+    <div>
+        <label for="nbbaigneur">nombre de baigneur : </label>
+        <select name="niveaunb" id="niveaunb">
+            <option value="faible">faible</option>
+            <option value="modéré">modéré</option>
+            <option value="élevé">élevé</option>
+            <option value="trés élevé">trés élevé</option>
+            <option value="extrême">extrême</option>
+        </select>
+    </div>
+    <div>
+        <label for="nbpratiquant">nombre de pratiquant : </label>
+        <select name="niveaunb" id="niveaunb">
+            <option value="faible">faible</option>
+            <option value="modéré">modéré</option>
+            <option value="élevé">élevé</option>
+            <option value="trés élevé">trés élevé</option>
+            <option value="extrême">extrême</option>
+        </select>
+    </div>
+    <div>
+        <label for="nbbateau">nombre de bâteau : </label>
+        <select name="niveaunb" id="niveaunb">
+            <option value="faible">faible</option>
+            <option value="modéré">modéré</option>
+            <option value="élevé">élevé</option>
+            <option value="trés élevé">trés élevé</option>
+            <option value="extrême">extrême</option>
+        </select>
+    </div>
+    <div>
+        <label for="polutioneau">Comment était la polution de l'eau : </label>
+        <select name="niveaunb" id="niveaunb">
+            <option value="faible">faible</option>
+            <option value="modéré">modéré</option>
+            <option value="élevé">élevé</option>
+            <option value="trés élevé">trés élevé</option>
+            <option value="extrême">extrême</option>
+        </select>
+    </div>
+    <div>
+        <label for="polutioneau">Comment était la polution de la plage : </label>
+        <select name="niveaunb" id="niveaunb">
+            <option value="faible">faible</option>
+            <option value="modéré">modéré</option>
+            <option value="élevé">élevé</option>
+            <option value="trés élevé">trés élevé</option>
+            <option value="extrême">extrême</option>
+        </select>
+    </div>-->
+    <div>
+        <label for="spot">INFLUENCE : </label>
+    </div>
+    <div class="slidecontainer">
+        <label for="polutioneau" align = left>nombre de pratiquants : </label  >
+        <input type="range" min="1" max="100" value="50" class="slider" id="myRange" align =right>
+    </div>
+    <div class="slidecontainer">
+        <label for="polutioneau" align = left>nombre de baigneurs : </label  >
+        <input type="range" min="1" max="100" value="50" class="slider" id="myRange" align =right>
+    </div>
+    <div class="slidecontainer">
+        <label for="polutioneau" align = left>nombre de bâteaux : </label  >
+        <input type="range" min="1" max="100" value="50" class="slider" id="myRange" align =right>
+      </div>
+    <div>
+      <label for="spot">POLUTION : </label>
+    </div>
+    <div class="slidecontainer">
+        <label for="polutioneau" align = left>Comment était la polution de l'eau ? </label  >
+        <input type="range" min="1" max="100" value="50" class="slider" id="myRange" align =right>
+      </div>
+    <div class="slidecontainer">
+        <label for="polutioneau" align = left>Comment était la polution de la plage ? </label  >
+        <input type="range" min="1" max="100" value="50" class="slider" id="myRange" align =right>
+    </div>
+    <div class="slidecontainer">
+        <label for="polutioneau" align = left>Combien de déchet as-tu ramassé ? </label  >
+        <input type="range" min="1" max="100" value="50" class="slider" id="myRange" align =right>
+    </div>
+</form>
