page de connexion et background du site

--- a/nuit-info-surfapp/src/app/app.component.html
+++ b/nuit-info-surfapp/src/app/app.component.html
@@ -1,1 +1,12 @@
-<router-outlet></router-outlet>
+<body>
+    <div class="header">
+        <div ><img style="width: 200px;height: 200px;margin : 80 80 80 80 " src="../assets/2.png" alt="logo"></div>
+        <div class="bigtitle"></div>
+    </div>
+    <div class="pagecontent">
+        <router-outlet></router-outlet>
+        
+    </div>
+    <div style="height: 600px;"></div>
+
+</body>
