--- a/nuit-info-surfapp/src/app/page-connexion/page-connexion.component.html
+++ b/nuit-info-surfapp/src/app/page-connexion/page-connexion.component.html
@@ -1,19 +1,22 @@
-<h1> Connexion </h1>
+<div class="container">
+    
+    <br><h1> Connexion </h1>
 
 <div id="connexion-form-div">
     <form (ngSubmit)="onSave(f)" id="connexion-form" #f="ngForm">
         
-        <label><b>Nom d'utilisateur</b></label>
+        <label><b>Nom d'utilisateur </b></label>
         <input type="text" placeholder="Entrer le nom d'utilisateur" name="email" ngModel required><br>
-
-        <label><b>Mot de passe</b></label>
+        <br>
+        <label><b>Mot de passe </b></label>
         <input type="password" placeholder="Entrer le mot de passe" name="password" ngModel required><br>
+        <br>
+        <button type="submit" id='submit' value='LOGIN' [disabled]="f.invalid">Submit</button>
 
-        <input type="submit" id='submit' value='LOGIN' [disabled]="f.invalid">
     </form>
 </div>
 
 <div>
     <!--Ajoutez lien de redirection mote d'inscription-->
     <a routerLink="/register"> Toujours pas dans la secte ? </a>
-</div>
+</div></div>
