--- a/nuit-info-surfapp/src/app/acceuil/acceuil.component.html
+++ b/nuit-info-surfapp/src/app/acceuil/acceuil.component.html
@@ -1,7 +1,13 @@
 
 <div class="middle">
     <button class="button" >Inscription</button>
+    <div id="inscription" >
+      <a routerLink="/page-inscription">Inscription</a>
+    </div>
     <button class="button2" >Connexion</button>
+    <div id="Connexion" >
+      <a routerLink="/page-connexion">Inscription</a>
+    </div>
     
   </div>
 <div class= "titre">
@@ -15,7 +21,3 @@
 <img src ="../assets/j.jpg"  class ="decoupe_triangle" />
 <img src ="../assets/s.jpg"  class ="decoupe_triangle" />
 </div>
-
-<button class="button3">Information</button>
-    <button class="button4" >Meteo</button>
-    <button class="button5" >Session</button>
