--- a/nuit-info-surfapp/src/app/navbar/navbar.component.html
+++ b/nuit-info-surfapp/src/app/navbar/navbar.component.html
@@ -4,14 +4,10 @@
     <div class="dropdown">
         <button (click)="myFunction()" class="dropbtn">Dropdown</button>
         <div id="myDropdown" class="dropdown-content">
-            <a routerLink="/test">Home</a>
-            <a href="#profile">Profile</a>
-            <a href="#paramètre">Paramètre</a>
-            <a href="#activité">Activité</a>
-            <a href="#communauté">Communauté</a>
-            <a href="#historique">Historique</a>
-            <a href="#plages">Les plages</a>
-            <a href="#favoris">Favoris</a>
+            <a routerLink="/acceuil">Home</a>
+            <a routerLink="/photoprofil">Profile</a>
+            <a routerLink="/sante">Santé</a>
+            <a routerLink="/infopage">Les plages</a>
         </div>
       </div> 
 </body>
