--- a/nuit-info-surfapp/src/app/acceuil/acceuil.component.css
+++ b/nuit-info-surfapp/src/app/acceuil/acceuil.component.css
@@ -1,110 +1,52 @@
 .titre {
-    
-    margin-top: 0%;
-   
-  }
-img {display : inline-block ; width :30% ; margin : 1% ;}  
+  margin-top: 0%;
+}
+img {
+  display: inline-block;
+  width: 30%;
+  margin: 1%;
+}
 
-.decoupe_triangle{
-
-clip-path : polygon(0 100%, 50% 0, 100% 100%);
-
+.decoupe_triangle {
+  clip-path: polygon(0 100%, 50% 0, 100% 100%);
 }
 .contain {
-    
-    margin-top: 7%;
-    margin-left: 4%;
-    position: absolute; 
-    z-index: 1;
-  }
-  .button {
-    
-    background-color: #00c4cc; /* Green */
-    position: relative;
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin-top: 2%;
-    left: 90%;
-    -webkit-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-    cursor: pointer;
-  }
-  .button2 {
-    
-    background-color: #00c4cc; /* Green */
-    position: relative;
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin-top: 2%;
-    left: 71%;
-    -webkit-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-    cursor: pointer;
-  }
-  .button3 {
-    
-    background-color: #121640; /* Green */
-    position: relative;
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin-top: 2%;
-    left: 19%;
-    -webkit-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-    cursor: pointer;
-    z-index: 2
-  }.button4 {
-    
-    background-color: #121640; /* Green */
-    position: relative;
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin-top: 20%;
-    left: 73%;
-    -webkit-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-    cursor: pointer;
-    z-index: 2
-  }.button5 {
-    
-    background-color: #121640; /* Green */
-    position: relative;
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin-top: 2%;
-    left: 32%;
-    -webkit-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-    cursor: pointer;
-    z-index: 2
-  }
+  margin-top: 7%;
+  margin-left: 4%;
+  position: absolute;
+  z-index: 1;
+}
+.button {
+  background-color: #00c4cc; /* Green */
+  position: relative;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin-top: 2%;
+  left: 90%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  cursor: pointer;
+}
+.button2 {
+  background-color: #00c4cc; /* Green */
+  position: relative;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin-top: 2%;
+  left: 71%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  cursor: pointer;
+}
