--- a/nuit-info-surfapp/src/app/acceuil/acceuil.component.html
+++ b/nuit-info-surfapp/src/app/acceuil/acceuil.component.html
@@ -1,12 +1,10 @@
 
 <div class="middle">
-    <button class="button" >Inscription</button>
     <div id="inscription" >
       <a routerLink="/page-inscription">Inscription</a>
     </div>
-    <button class="button2" >Connexion</button>
     <div id="Connexion" >
-      <a routerLink="/page-connexion">Inscription</a>
+      <a routerLink="/page-connexion">Connexion</a>
     </div>
     
   </div>
